--- a/src/app/components/promo/promo.component.html
+++ b/src/app/components/promo/promo.component.html
@@ -77,14 +77,14 @@
             </ng-container>
 
             <ng-container matColumnDef="estimatePromoSale">
-                <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">Estimate promo sale 
-                    </mat-header-cell>
+                <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">Estimate promo sale
+                </mat-header-cell>
                 <mat-cell *matCellDef="let row">{{ row.estimatePromoSale
                     }}</mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="estimatePromoSaleCash">
-                <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">Estimate promo sale 
+                <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">Estimate promo sale
                     cash</mat-header-cell>
                 <mat-cell *matCellDef="let row">{{ row.estimatePromoSaleCash
                     }}</mat-cell>
@@ -103,17 +103,20 @@
             </ng-container>
 
             <ng-container matColumnDef="estimateRopi">
-                <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">Estimate ROPI</mat-header-cell>
+                <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">Estimate
+                    ROPI</mat-header-cell>
                 <mat-cell *matCellDef="let row">{{ (row.estimateRopi * 100 - 100).toFixed(2)}}.%</mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="ropiCash">
-                <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">ROPI cash</mat-header-cell>
+                <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">ROPI
+                    cash</mat-header-cell>
                 <mat-cell *matCellDef="let row">{{ row.ropiCash}}</mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="estimateRopiCash">
-                <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">Estimate ROPI cash</mat-header-cell>
+                <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">Estimate ROPI
+                    cash</mat-header-cell>
                 <mat-cell *matCellDef="let row">{{ row.estimateRopiCash}}</mat-cell>
             </ng-container>
 
