--- a/src/app/components/promo/promo.component.html
+++ b/src/app/components/promo/promo.component.html
@@ -76,11 +76,35 @@
                 <mat-cell *matCellDef="let row">{{ row.dateEnd | date:'dd/MM/yyyy' }}</mat-cell>
             </ng-container>
 
+            <ng-container matColumnDef="rebate">
+                <mat-header-cell *matHeaderCellDef mat-sort-header
+                    class="whitetext column-name">Rebate</mat-header-cell>
+                <mat-cell *matCellDef="let row">{{ row.rebate }}%</mat-cell>
+            </ng-container>
+
+            <ng-container matColumnDef="expenses">
+                <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">Fix
+                    investment</mat-header-cell>
+                <mat-cell *matCellDef="let row">{{ row.expenses }}</mat-cell>
+            </ng-container>
+
+            <ng-container matColumnDef="regularSale">
+                <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">Regular
+                    sale</mat-header-cell>
+                <mat-cell *matCellDef="let row">{{ row.regularSale }}</mat-cell>
+            </ng-container>
+
             <ng-container matColumnDef="estimatePromoSale">
                 <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">Estimate promo sale
                 </mat-header-cell>
                 <mat-cell *matCellDef="let row">{{ row.estimatePromoSale
                     }}</mat-cell>
+            </ng-container>
+
+            <ng-container matColumnDef="resultSalePercent">
+                <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">Result
+                    sale</mat-header-cell>
+                <mat-cell *matCellDef="let row">{{ row.resultSale}}</mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="estimatePromoSaleCash">
@@ -90,11 +114,10 @@
                     }}</mat-cell>
             </ng-container>
 
-            <ng-container matColumnDef="resultSalePercent">
-                <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">Result Sale
-                    %</mat-header-cell>
-                <mat-cell *matCellDef="let row">{{ (row.resultSale / row.regularSale * 100 - 100).toFixed(2)
-                    }}%</mat-cell>
+            <ng-container matColumnDef="estimateRopi">
+                <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">Estimate
+                    ROPI</mat-header-cell>
+                <mat-cell *matCellDef="let row">{{ (row.estimateRopi * 100 - 100).toFixed(2)}}.%</mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="ropi">
@@ -102,10 +125,16 @@
                 <mat-cell *matCellDef="let row">{{ (row.ropi * 100 - 100).toFixed(2)}}.%</mat-cell>
             </ng-container>
 
-            <ng-container matColumnDef="estimateRopi">
-                <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">Estimate
-                    ROPI</mat-header-cell>
-                <mat-cell *matCellDef="let row">{{ (row.estimateRopi * 100 - 100).toFixed(2)}}.%</mat-cell>
+            <ng-container matColumnDef="ropiDifference">
+                <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">ROPI
+                    difference</mat-header-cell>
+                <mat-cell *matCellDef="let row">{{ ((row.ropi - row.estimateRopi) * 100 - 100).toFixed(2)}}.%</mat-cell>
+            </ng-container>
+
+            <ng-container matColumnDef="estimateRopiCash">
+                <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">Estimate ROPI
+                    cash</mat-header-cell>
+                <mat-cell *matCellDef="let row">{{ row.estimateRopiCash}}</mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="ropiCash">
@@ -114,10 +143,10 @@
                 <mat-cell *matCellDef="let row">{{ row.ropiCash}}</mat-cell>
             </ng-container>
 
-            <ng-container matColumnDef="estimateRopiCash">
-                <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">Estimate ROPI
-                    cash</mat-header-cell>
-                <mat-cell *matCellDef="let row">{{ row.estimateRopiCash}}</mat-cell>
+            <ng-container matColumnDef="ropiCashDifference">
+                <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">ROPI
+                    cash difference</mat-header-cell>
+                <mat-cell *matCellDef="let row">{{ row.ropiCash - row.estimateRopiCash}}</mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="actions">
@@ -128,23 +157,23 @@
                 </mat-header-cell>
                 <mat-cell *matCellDef="let row; let i=index">
                     <button *ngIf="type === 'PREDEFINED'" mat-icon-button color="primary"
-                        (click)="openDialog(6, row.promoId, row.retailerName, row.productName, '', '', row.rebate, row.regularSale, row.type, row.ropi, row.ropiCash, row.promoSale, row.expenses, row.price, 0, row.predefined)">
-                        Copy
+                        (click)="openDialog(6, row.promoId, row.retailerName, row.productName, '', '', row.rebate, row.regularSale, row.type, row.ropi, row.ropiCash, row.estimatePromoSale, row.expenses, row.price, 0, row.predefined)">
+                        <mat-icon area-label="Copy">filter_none</mat-icon>
                     </button>
                     <button mat-stroked-button color="primary" *ngIf="type === 'MY_CONFIRMATION'"
-                        (click)="openDialog(2, row.promoId, row.retailerName, row.productName, row.dateStart, row.dateEnd, row.rebate, row.regularSale, row.type, row.ropi, row.ropiCash, row.promoSale, row.expenses, row.price, row.resultSale, row.predefined)">Confirm
+                        (click)="openDialog(2, row.promoId, row.retailerName, row.productName, row.dateStart, row.dateEnd, row.rebate, row.regularSale, row.type, row.ropi, row.ropiCash, row.estimatePromoSale, row.expenses, row.price, row.resultSale, row.predefined)">Confirm
                     </button>
                     <button mat-icon-button color="primary"
-                        (click)="openDialog(3, row.promoId, row.retailerName, row.productName, row.dateStart, row.dateEnd, row.rebate, row.regularSale, row.type, row.ropi, row.ropiCash, row.promoSale, row.expenses, row.price, row.resultSale, row.predefined)">
+                        (click)="openDialog(3, row.promoId, row.retailerName, row.productName, row.dateStart, row.dateEnd, row.rebate, row.regularSale, row.type, row.ropi, row.ropiCash, row.estimatePromoSale, row.expenses, row.price, row.resultSale, row.predefined)">
                         <mat-icon area-label="Delete">delete</mat-icon>
                     </button>
                     <button mat-icon-button color="primary"
                         *ngIf="type === 'FINISHED' && !row.resultSale && calculateDiff(row.dateEnd) >= 3"
-                        (click)="openDialog(4, row.promoId, row.retailerName, row.productName, row.dateStart, row.dateEnd, row.rebate, row.regularSale, row.type, row.ropi, row.ropiCash, row.promoSale, row.expenses, row.price, row.resultSale, row.predefined)">
+                        (click)="openDialog(4, row.promoId, row.retailerName, row.productName, row.dateStart, row.dateEnd, row.rebate, row.regularSale, row.type, row.ropi, row.ropiCash, row.estimatePromoSale, row.expenses, row.price, row.resultSale, row.predefined)">
                         <mat-icon area-label="Edit">edit</mat-icon>
                     </button>
                     <button mat-icon-button color="primary"
-                        (click)="openDialog(5, row.promoId, row.retailerName, row.productName, row.dateStart, row.dateEnd, row.rebate, row.regularSale, row.type, row.ropi, row.ropiCash, row.promoSale, row.expenses, row.price, row.resultSale, row.predefined)">
+                        (click)="openDialog(5, row.promoId, row.retailerName, row.productName, row.dateStart, row.dateEnd, row.rebate, row.regularSale, row.type, row.ropi, row.ropiCash, row.estimatePromoSale, row.expenses, row.price, row.resultSale, row.predefined)">
                         <mat-icon area-label="Info">info</mat-icon>
                     </button>
                     <button *ngIf="type === 'FINISHED' && !row.predefined" mat-icon-button color="primary"
@@ -153,7 +182,7 @@
                     </button>
                     <button *ngIf="type === 'PREDEFINED' && row.predefined" mat-icon-button color="primary"
                         (click)="setPredefined(row, false)">
-                        Remove from predefined
+                        <mat-icon area-label="Remove">remove_circle</mat-icon>
                     </button>
                 </mat-cell>
             </ng-container>
