--- a/src/app/dialogs/promo-dialog/promo-dialog.component.html
+++ b/src/app/dialogs/promo-dialog/promo-dialog.component.html
@@ -91,9 +91,17 @@
 
         <div class="form">
             <mat-form-field appearance="fill">
-                <mat-label>Regular sale</mat-label>
-                <input type="number" matInput [(ngModel)]="data.regularSale" required name="regularSale"
+                <mat-label>Fix investment</mat-label>
+                <input type="number" matInput [(ngModel)]="data.expenses" required name="expenses"
                     [disabled]="flag === 2 || flag === 3|| flag === 4 || flag === 5">
+            </mat-form-field>
+        </div>
+
+        <div class="form">
+            <mat-form-field appearance="fill">
+                <mat-label>Price</mat-label>
+                <input type="number" matInput [(ngModel)]="data.price" required name="price"
+                    [disabled]="flag === 2 || flag === 3 || flag === 4 || flag === 5">
             </mat-form-field>
         </div>
 
@@ -111,44 +119,20 @@
 
         <div class="form">
             <mat-form-field appearance="fill">
+                <mat-label>Regular sale</mat-label>
+                <input type="number" matInput [(ngModel)]="data.regularSale" required name="regularSale"
+                    [disabled]="flag === 2 || flag === 3|| flag === 4 || flag === 5">
+            </mat-form-field>
+        </div>
+
+        <div class="form">
+            <mat-form-field appearance="fill">
                 <mat-label>Estimate promo sale</mat-label>
                 <input type="number" matInput [(ngModel)]="data.estimatePromoSale" required name="estimatePromoSale"
                     [disabled]="flag === 2 || flag === 3|| flag === 4 || flag === 5">
             </mat-form-field>
         </div>
 
-        <div class="form">
-            <mat-form-field appearance="fill">
-                <mat-label>Estimate promo sale cash</mat-label>
-                <input type="number" matInput [(ngModel)]="data.estimatePromoSaleCash" required
-                    name="estimatePromoSaleCash" [disabled]="flag === 2 || flag === 3|| flag === 4 || flag === 5">
-            </mat-form-field>
-        </div>
-
-        <div class="form"
-            *ngIf="data.estimatePromoSaleCash && (flag === 1 || flag===2 || flag=== 4 || flag===3|| flag===5)">
-            <mat-form-field appearance="fill">
-                <mat-label>Estimate promo sale cash</mat-label>
-                <input type="number" matInput name="result" [required]="flag === 4" disabled
-                    [value]="data.estimatePromoSaleCash.toFixed(2)">
-            </mat-form-field>
-        </div>
-
-        <div class="form">
-            <mat-form-field appearance="fill">
-                <mat-label>Expenses</mat-label>
-                <input type="number" matInput [(ngModel)]="data.expenses" required name="expenses"
-                    [disabled]="flag === 2 || flag === 3|| flag === 4 || flag === 5">
-            </mat-form-field>
-        </div>
-
-        <div class="form">
-            <mat-form-field appearance="fill">
-                <mat-label>Price</mat-label>
-                <input type="number" matInput [(ngModel)]="data.price" required name="price"
-                    [disabled]="flag === 2 || flag === 3 || flag === 4 || flag === 5">
-            </mat-form-field>
-        </div>
 
         <div class="form" *ngIf="flag === 2 || flag === 3|| flag === 4 || flag === 5">
             <mat-form-field appearance="fill">
@@ -158,11 +142,19 @@
             </mat-form-field>
         </div>
 
-        <div class="form" *ngIf="data.resultSale">
+        <!-- <div class="form" *ngIf="data.resultSale">
             <mat-form-field appearance="fill">
                 <mat-label>Result Sale %</mat-label>
                 <input type="number" matInput name="result" [required]="flag === 4" disabled
                     [value]="(data.resultSale / data.regularSale * 100 - 100).toFixed(2)">
+            </mat-form-field>
+        </div> -->
+
+        <div class="form" *ngIf="data.estimateRopi && (flag === 1 || flag===2 || flag=== 4 || flag===3|| flag===5)">
+            <mat-form-field appearance="fill">
+                <mat-label>Estimate ROPI %</mat-label>
+                <input type="number" matInput name="result" [required]="flag === 4" disabled
+                    [value]="(data.estimateRopi * 100 - 100).toFixed(2)">
             </mat-form-field>
         </div>
 
@@ -174,11 +166,20 @@
             </mat-form-field>
         </div>
 
-        <div class="form" *ngIf="data.estimateRopi && (flag === 1 || flag===2 || flag=== 4 || flag===3|| flag===5)">
+        <div class="form"
+            *ngIf="data.ropi && data.estimateRopi && (flag === 1 || flag===2 || flag=== 4 || flag===3|| flag===5)">
             <mat-form-field appearance="fill">
-                <mat-label>Estimate ROPI %</mat-label>
+                <mat-label>ROPI Difference %</mat-label>
                 <input type="number" matInput name="result" [required]="flag === 4" disabled
-                    [value]="(data.estimateRopi * 100 - 100).toFixed(2)">
+                    [value]="((data.ropi - data.estimateRopi) * 100 - 100).toFixed(2)">
+            </mat-form-field>
+        </div>
+
+        <div class="form" *ngIf="data.estimateRopiCash && (flag === 1 || flag===2 || flag=== 4 || flag===3|| flag===5)">
+            <mat-form-field appearance="fill">
+                <mat-label>Estimate ROPI Cash</mat-label>
+                <input type="number" matInput name="result" [required]="flag === 4" disabled
+                    [value]="data.estimateRopiCash">
             </mat-form-field>
         </div>
 
@@ -190,11 +191,12 @@
             </mat-form-field>
         </div>
 
-        <div class="form" *ngIf="data.estimateRopiCash && (flag === 1 || flag===2 || flag=== 4 || flag===3|| flag===5)">
+        <div class="form"
+            *ngIf="data.ropiCash && data.estimateRopiCash && (flag === 1 || flag===2 || flag=== 4 || flag===3|| flag===5)">
             <mat-form-field appearance="fill">
-                <mat-label>Estimate ROPI Cash</mat-label>
-                <input type="number" matInput name="result" [required]="flag === 4" disabled
-                    [value]="data.estimateRopiCash">
+                <mat-label>ROPI Cash Difference</mat-label>
+                <input type="number" matInput name="ropiCash" [required]="flag === 4" disabled
+                    [value]="(data.ropiCash - data.estimateRopiCash).toFixed(2)">
             </mat-form-field>
         </div>
 
