Dodata ikonica za add to predefined

--- a/src/app/components/promo/promo.component.html
+++ b/src/app/components/promo/promo.component.html
@@ -178,7 +178,7 @@
                     </button>
                     <button *ngIf="type === 'FINISHED' && !row.predefined" mat-icon-button color="primary"
                         (click)="setPredefined(row, true)">
-                        Add to predefined
+                        <mat-icon area-label="Add to predefined">settings_backup_restore</mat-icon>
                     </button>
                     <button *ngIf="type === 'PREDEFINED' && row.predefined" mat-icon-button color="primary"
                         (click)="setPredefined(row, false)">
