Export promo statistike

--- a/src/app/components/promo-dashboard/promo-dashboard.component.html
+++ b/src/app/components/promo-dashboard/promo-dashboard.component.html
@@ -137,8 +137,11 @@
                     selected
                     criteria</mat-toolbar>
             </div>
+            <button mat-stroked-button color="primary" class="item2" style="margin-bottom: 10px; margin-left:10px;"
+            (click)="export()">Export</button>
         </mat-card-content>
     </mat-card>
+   
 </div>
 
 <div class="two-charts">
