--- a/src/app/components/retailer/retailer.component.css
+++ b/src/app/components/retailer/retailer.component.css
@@ -35,3 +35,12 @@
 .column-name {
   font-size: 16px;
 }
+
+.radio-group {
+  margin-left: 30px;
+}
+
+.radio-btn {
+  margin-right: 10px;
+  font-size: 12px;
+}
