--- a/src/app/components/promo-dashboard/promo-dashboard.component.html
+++ b/src/app/components/promo-dashboard/promo-dashboard.component.html
@@ -312,6 +312,22 @@
 
 <mat-card class="card chart-card">
     <mat-card-header>
+        <mat-card-title>Average Uplift by Period</mat-card-title>
+        <mat-card-subtitle *ngIf="!avgUpliftByPeriod || avgUpliftByPeriod.length === 0">No data for selected
+            criteria</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content class=" card-content">
+        <ngx-charts-bar-vertical *ngIf="avgUpliftByPeriod && avgUpliftByPeriod.length > 0" [view]="view"
+            [results]="avgUpliftByPeriod" [gradient]="gradientBarChart" [scheme]="colorScheme" [xAxis]="showXAxis"
+            [yAxis]="showYAxis" [legend]="showLegendBarChart" [showXAxisLabel]="showXAxisLabel"
+            [showYAxisLabel]="showYAxisLabel" [xAxisLabel]="xAxisLabel" [yAxisLabel]="yAxisLabel"
+            [yAxisTickFormatting]="yAxisTickFormattingCount">
+        </ngx-charts-bar-vertical>
+    </mat-card-content>
+</mat-card>
+
+<mat-card class="card chart-card">
+    <mat-card-header>
         <mat-card-title>Promo Count by Period</mat-card-title>
         <mat-card-subtitle *ngIf="!promoCountByPeriod || promoCountByPeriod.length === 0">No data for selected
             criteria</mat-card-subtitle>
