--- a/src/app/components/promo/promo.component.html
+++ b/src/app/components/promo/promo.component.html
@@ -149,6 +149,15 @@
                 <mat-cell *matCellDef="let row">{{ row.ropiCash - row.estimateRopiCash}}</mat-cell>
             </ng-container>
 
+            <ng-container matColumnDef="uplift">
+                <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">Uplift</mat-header-cell>
+                <mat-cell *matCellDef="let row">{{ row.resultSale/row.regularSale}}</mat-cell>
+            </ng-container>
+
+            <ng-container matColumnDef="estimateUplift">
+                <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">Estimate uplift</mat-header-cell>
+                <mat-cell *matCellDef="let row">{{ row.estimatePromoSale/row.regularSale}}</mat-cell>
+            </ng-container>
 
             <ng-container matColumnDef="actions">
                 <mat-header-cell *matHeaderCellDef>
