Prikaz radio buttona za retailera samo na promodas

--- a/src/app/components/promo-dashboard/promo-dashboard.component.html
+++ b/src/app/components/promo-dashboard/promo-dashboard.component.html
@@ -14,7 +14,8 @@
             selectedUser }} <mat-icon>close</mat-icon></button>
         <button mat-stroked-button class="filter-section-item" *ngIf="selectedRetailer" (click)="deselectRetailer()">{{
             selectedRetailer }} - First Table<mat-icon>close</mat-icon></button>
-        <button mat-stroked-button class="filter-section-item" *ngIf="selectedRetailerForSecondTable && selectedRetailerForSecondTable != 'null'"
+        <button mat-stroked-button class="filter-section-item"
+            *ngIf="selectedRetailerForSecondTable && selectedRetailerForSecondTable != 'null'"
             (click)="deselectRetailerForSecondTable()">{{
             selectedRetailerForSecondTable }} - Second Table<mat-icon>close</mat-icon></button>
         <button mat-stroked-button class="filter-section-item" *ngIf="selectedProductCategory"
@@ -26,7 +27,7 @@
                 <app-user [isDashboard]="true" (selectedUser)="selectUser($event)"></app-user>
             </div>
             <div class="table-section-item">
-                <app-retailer [isDashboard]="true" (selectedRetailer)="selectRetailer($event)"
+                <app-retailer [isDashboard]="true" [showRadioButtons]="true" (selectedRetailer)="selectRetailer($event)"
                     (radioBtnValueEvent)="onRadioBtnChange($event)"></app-retailer>
             </div>
             <div class="table-section-item">
