Positions / suggestions odvojeni

--- a/src/app/components/position/position.component.html
+++ b/src/app/components/position/position.component.html
@@ -1,5 +1,5 @@
 <div style="margin:50px" *ngIf="positionCheck">
-  <label>
+  <label style="margin-right:10px">
     <input type="radio" name="option" value="positions" (click)="toggleIsSuggestions('pos')"> Positions
   </label>
   <label>
