--- a/src/app/components/store-check-page/store-check-page.component.html
+++ b/src/app/components/store-check-page/store-check-page.component.html
@@ -9,7 +9,7 @@
 
             <h2 *ngIf="object" class="flex2">{{object.objectName}}</h2>
 
-            <div *ngIf="workModel !== 'positions'">
+            <div class="flex3" *ngIf="workModel !== 'positions'">
                 <em class="fa-solid fa-file-powerpoint fa-3x flex3" style="margin-right: 10%;margin-top: 5%;"
                     (click)="openPlanogramDialog()"></em>
             </div>
