Comment u return dialogu da nije required

--- a/src/app/dialogs/returndialog/returndialog.component.html
+++ b/src/app/dialogs/returndialog/returndialog.component.html
@@ -65,7 +65,7 @@
         <div class="form">
             <mat-form-field>
                 <input matInput placeholder="Comment" [(ngModel)]="data.comment" name="comment"
-                    formControlName="comment" required />
+                    formControlName="comment" />
             </mat-form-field>
         </div>
 
