--- a/src/app/components/store-check-page/store-check-page.component.html
+++ b/src/app/components/store-check-page/store-check-page.component.html
@@ -14,85 +14,64 @@
                     (click)="openPlanogramDialog()"></em>
             </div>
         </div>
+
         <div class="object-info-data" *ngIf="showDetails">
             <div class="object-info-slider">
-                <div class="card1">
-                    <div class="obj-info"> <u>Address:</u><strong> {{ object.address }}, {{ object.city }}</strong>
-                    </div>
-                    <div class="obj-info"> <u>Format:</u><strong> {{ object.objectFormat }}</strong></div>
-                    <div class="obj-info"> <u>Retailer:</u><strong> {{ object.retailer.retailerName }}</strong></div>
-                    <div class="obj-info"> <u>Assortment module:</u><strong> {{ object.objectInfo.assortmentModule
-                            }}</strong>
-                    </div>
-                    <div class="obj-info"> <u>Number of registers:</u><strong> {{ object.objectInfo.registersNumber
-                            }}</strong>
-                    </div>
+                <div class="card">
+                    <div class="obj-info">Address:<strong>{{ object.address }}, {{ object.city }}</strong></div>
+                    <div class="obj-info">Format:<strong>{{ object.objectFormat }}</strong></div>
+                    <div class="obj-info">Retailer:<strong>{{ object.retailer.retailerName }}</strong></div>
+                    <div class="obj-info">Assortment module:<strong>{{ object.objectInfo.assortmentModule }}</strong></div>
+                    <div class="obj-info">Number of registers:<strong>{{ object.objectInfo.registersNumber }}</strong></div>
                 </div>
-                <div class="card1">
-                    <div class="obj-info"> <u>KAM:</u><strong> {{ object.kam}}</strong></div>
-                    <div class="obj-info"> <u>Director:</u><strong> {{ object.director}}</strong></div>
-                    <div class="obj-info"> <u>Supervisor:</u><strong> {{ object.supervisor}}</strong></div>
-                    <div class="obj-info"> <u>Merchandiser:</u><strong> {{ object.merchandiser}}</strong></div>
-                    <div class="obj-info"> <u>Commercialist:</u><strong> {{ object.commercialist}}</strong> </div>
-                    <div class="obj-info"> <u>Requisition days:</u><strong> {{ object.requisitionDays }}</strong> </div>
-                    <div class="obj-info"> <u>Merchendiser req. days:</u><strong> {{ object.merchandiserRevisionDays
-                            }}</strong>
-                    </div>
+                <div class="card">
+                    <div class="obj-info">KAM:<strong>{{ object.kam}}</strong></div>
+                    <div class="obj-info">Director:<strong>{{ object.director}}</strong></div>
+                    <div class="obj-info">Supervisor:<strong>{{ object.supervisor}}</strong></div>
+                    <div class="obj-info">Merchandiser:<strong>{{ object.merchandiser}}</strong></div>
+                    <div class="obj-info">Commercialist:<strong>{{ object.commercialist}}</strong></div>
+                    <div class="obj-info">Requisition days:<strong>{{ object.requisitionDays }}</strong></div>
+                    <div class="obj-info">Merchandiser req. days:<strong>{{ object.merchandiserRevisionDays }}</strong></div>
                 </div>
             </div>
-
+        
             <div class="object-info-slider">
                 <div class="card">
-                    <div style="font-size: 250%;"><strong>{{ object.objectInfo.shelfSpaceM }}</strong></div>Shelf Space
-                    M
+                    <div style="font-size: 250%;"><strong>{{ object.objectInfo.shelfSpaceM }}</strong></div>Shelf Space M
                 </div>
                 <div class="card">
-                    <div style="font-size: 250%;"><strong>{{ object.objectInfo.companyShelfSpaceM }}</strong></div>
-                    Company Shelf
-                    Space M
+                    <div style="font-size: 250%;"><strong>{{ object.objectInfo.companyShelfSpaceM }}</strong></div>Company Shelf Space M
                 </div>
                 <div class="card">
-                    <div style="font-size: 250%;"><strong>{{ object.objectInfo.companyShelfSpacePercent }}</strong>
-                    </div>Company
-                    Shelf Space %
-                </div>
-                <div class="card2">
-                    <div style="font-size: 250%;"><strong>{{ object.objectInfo.gainings12Mrsd.toLocaleString()
-                            }}</strong></div>
-                    Gainings 12M (RSD,mil)
+                    <div style="font-size: 250%;"><strong>{{ object.objectInfo.companyShelfSpacePercent }}</strong></div>Company Shelf Space %
                 </div>
                 <div class="card">
-                    <div style="font-size: 250%;"><strong>{{ object.objectInfo.gainingsVs12mpercent }}</strong></div>
-                    Gainings VS
-                    12M %
+                    <div style="font-size: 250%;"><strong>{{ object.objectInfo.gainings12Mrsd.toLocaleString() }}</strong></div>Gainings 12M (RSD,mil)
                 </div>
                 <div class="card">
-                    <div style="font-size: 250%;"><strong>{{ object.objectInfo.wdpercentSerbia }}</strong></div>WD %
-                    Serbia
+                    <div style="font-size: 250%;"><strong>{{ object.objectInfo.gainingsVs12mpercent }}</strong></div>Gainings VS 12M %
                 </div>
                 <div class="card">
-                    <div style="font-size: 250%;"><strong>{{ object.objectInfo.wdpercentSector }}</strong></div>WD %
-                    Sector
+                    <div style="font-size: 250%;"><strong>{{ object.objectInfo.wdpercentSerbia }}</strong></div>WD % Serbia
                 </div>
                 <div class="card">
-                    <div style="font-size: 250%;"><strong>{{ object.objectInfo.wdpercentCustomer }}</strong></div>WD %
-                    Customer
+                    <div style="font-size: 250%;"><strong>{{ object.objectInfo.wdpercentSector }}</strong></div>WD % Sector
+                </div>
+                <div class="card">
+                    <div style="font-size: 250%;"><strong>{{ object.objectInfo.wdpercentCustomer }}</strong></div>WD % Customer
                 </div>
             </div>
         </div>
-
-
+        
         <div class="details">
             <h4 *ngIf="showDetails == false" class="detail-text">Details</h4>
-            <em class="fa-solid fa-circle-chevron-down fa-lg" (click)="showObjectInfos()"
-                *ngIf="showDetails == false"></em>
-            <em class="fa-solid fa-circle-chevron-up fa-lg" (click)="showObjectInfos()"
-                *ngIf="showDetails == true"></em>
+            <em class="fa-solid fa-circle-chevron-down fa-lg" (click)="showObjectInfos()" *ngIf="showDetails == false"></em>
+            <em class="fa-solid fa-circle-chevron-up fa-lg" (click)="showObjectInfos()" *ngIf="showDetails == true"></em>
         </div>
-    </div>
 
     <div class="main fadeIn second">
         <div *ngIf="workModel === 'resolveFeedbacks' || workModel === 'addStoreCheck'">
+            <br>
             <h3>UNRESOLVED FEEDBACKS:</h3>
             <app-feedback [objectIdCompany]="objectIdCompany" [resolveFeedbacks]="workModel === 'resolveFeedbacks'"
                 (showFinishButton)="enableFinishButton($event)"></app-feedback>
@@ -108,6 +87,7 @@
             </app-position>
         </div>
         <div class="margintop">
+           <div class="button-container">
             <button mat-stroked-button color="primary" class="item2" (click)="addToStoreCheck()"
                 *ngIf="showFinishButton && workModel === 'addStoreCheck'">Add</button>
                 <br>
@@ -117,8 +97,9 @@
                 </mat-progress-spinner>
               </div>
               <br>
-            <button mat-stroked-button color="primary" class="item2" style="margin-bottom: 10px; margin-left:10px;"
+             <button mat-stroked-button color="primary" class="item2" style="margin-bottom: 10px; margin-left:10px;"
                 (click)="exit()">Exit <mat-icon>exit_to_app</mat-icon></button>
+            </div>
         </div>
 
     </div>
