--- a/src/app/components/promo/promo.component.css
+++ b/src/app/components/promo/promo.component.css
@@ -6,9 +6,19 @@
     line-height: 80px;
     font-family: sans-serif;
 }
- 
+
 .mat-header-cell {
     background: #56baed;
+    justify-content: center;
+}
+
+.mat-cell {
+    justify-content: center;
+    font-size: 13px;
+}
+
+.action-cell {
+    justify-content: left;
 }
 
 .whitetext {
@@ -16,7 +26,7 @@
 }
 
 .column-name {
-    font-size: 16px;
+    font-size: 14px;
 }
 
 .noDataMessage {
