Ropi cash promenjeno u ropi abs

--- a/src/app/components/promo-dashboard/promo-dashboard.component.html
+++ b/src/app/components/promo-dashboard/promo-dashboard.component.html
@@ -108,19 +108,19 @@
                     </ng-container>
 
                     <ng-container matColumnDef="ropiCashLastYear">
-                        <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">ROPI Cash Last
+                        <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">ROPI Abs Last
                             Year
                         </mat-header-cell>
-                        <mat-cell *matCellDef="let row" data-label="ROPI cash last year">{{ row.ropiCashLastYear
-                            }}</mat-cell>
+                        <mat-cell *matCellDef="let row" data-label="ROPI abs last year">{{ row.ropiCashLastYear
+                            }} din</mat-cell>
                     </ng-container>
 
                     <ng-container matColumnDef="ropiCashThisYear">
-                        <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">ROPI Cash This
+                        <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">ROPI Abs This
                             Year
                         </mat-header-cell>
-                        <mat-cell *matCellDef="let row" data-label="ROPI cash this year">{{ row.ropiCashThisYear
-                            }}</mat-cell>
+                        <mat-cell *matCellDef="let row" data-label="ROPI abs this year">{{ row.ropiCashThisYear
+                            }} din</mat-cell>
                     </ng-container>
 
                     <ng-container matColumnDef="ropiCashDifference">
@@ -203,19 +203,19 @@
                     </ng-container>
 
                     <ng-container matColumnDef="ropiCashLastYear">
-                        <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">ROPI Cash Last
+                        <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">ROPI Abs Last
                             Year
                         </mat-header-cell>
-                        <mat-cell *matCellDef="let row" data-label="ROPI cash last year">{{ row.ropiCashLastYear
-                            }}</mat-cell>
+                        <mat-cell *matCellDef="let row" data-label="ROPI abs last year">{{ row.ropiCashLastYear
+                            }} din</mat-cell>
                     </ng-container>
 
                     <ng-container matColumnDef="ropiCashThisYear">
-                        <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">ROPI Cash This
+                        <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">ROPI Abs This
                             Year
                         </mat-header-cell>
-                        <mat-cell *matCellDef="let row" data-label="ROPI cash this year">{{ row.ropiCashThisYear
-                            }}</mat-cell>
+                        <mat-cell *matCellDef="let row" data-label="ROPI abs this year">{{ row.ropiCashThisYear
+                            }} din</mat-cell>
                     </ng-container>
 
                     <ng-container matColumnDef="ropiCashDifference">
